--- a/.mergify.yml
+++ b/.mergify.yml
@@ -23,7 +23,8 @@ pull_request_rules:
   - status-success=Build and Test (ubuntu-latest, 3, temurin@17, rootNative)
   - '#approved-reviews-by>=1'
   actions:
-    merge: {}
+    merge:
+      method: squash
 - name: Label core PRs
   conditions:
   - files~=^core/
